--- a/angular13/src/app/company/shared/components/login/entrance/login.component.html
+++ b/angular13/src/app/company/shared/components/login/entrance/login.component.html
@@ -18,10 +18,10 @@
                 <div class="container">
                     <div class="row">
 
-                        <input class="form-control" type="text" placeholder="Nome de Usuário" formControlName="username" formControlName="username">
+                        <input class="form-control" type="text" placeholder="Nome de Usuário" formControlName="userName">
                         <div class="pt-3"></div>
 
-                        <input class="form-control" type="password" placeholder="Senha" formControlName="password" formControlName="password">
+                        <input class="form-control" type="password" placeholder="Senha" formControlName="password">
 
                     </div>
                 </div>
