--- a/angular13/src/app/company/product/product-insert/product-insert.component.html
+++ b/angular13/src/app/company/product/product-insert/product-insert.component.html
@@ -31,7 +31,7 @@
                                 </div>
                                 <div class="col-4">
                                     <label>Compra</label>
-                                    <input type="date" class="form-control" formControlName="date" [ngClass]="{'is-invalid': _ProductService._ValidatorsSrv.touchedErrors('date', _ProductService.formProductInsert)}">
+                                    <input bsDatepicker type="text" class="form-control" formControlName="date" [ngClass]="{'is-invalid': _ProductService._ValidatorsSrv.touchedErrors('date', _ProductService.formProductInsert)}">
                                     <div class="invalid-feedback">
                                         {{_ProductService._ValidatorsSrv.required2(this._ProductService.formProductInsert, 'date', 'date', null, null)}}
                                     </div>
