--- a/angular13/src/app/company/product/product-pagelist/product-pagelist.component.html
+++ b/angular13/src/app/company/product/product-pagelist/product-pagelist.component.html
@@ -8,13 +8,13 @@
 
         <section class="bg-warning" style="width:525px; height: 60px; border-radius: 15px;">
 
-            <input class="form-control" (input)="this._ProductService.filterProducts($event)" type="text" style="width:500px; margin-top: 10px;">
+            <input class="form-control" (input)="this._ProductServices.filterProducts($event)" type="text" style="width:500px; margin-top: 10px;">
 
         </section>
     </div>
     <div class="mt-3"></div>
     <div class="row">
-        <section *ngFor="let prod of this._ProductService.products">
+        <section *ngFor="let prod of this._ProductServices.products">
             <ul class="list-group">
                 <div class="row">
                     <ol class="col-12 list-group-item " style="background-color: rgb(211, 162, 2);">
@@ -31,7 +31,7 @@
                             <section class="col-3 pt-2 pb-2 align-self-center">
                                 <button tooltip="Deletar {{prod.name}}" class="btn btn-outline-dark bi bi-trash" (click)="_ProductServices.toDelete(prod)"></button>
                                 <button tooltip="Editar {{prod.name}}" class="btn btn-outline-dark bi bi-pen " [routerLink]="['/product', prod.id, 'edit']"></button>
-                                <button tooltip="Detalhes {{prod.name}}" class="btn btn-outline-dark bi bi-info-square"></button>
+                                <button tooltip="Detalhes {{prod.name}}" class="btn btn-outline-dark bi bi-info-square" (click)="_ProductServices.toInfo(prod)"></button>
                             </section>
 
                         </div>
@@ -57,8 +57,8 @@
     </div>
     <div class="pb-4"></div>
     <div>
-        <pagination class="justify-content-center paginationstyle" [boundaryLinks]="true" [totalItems]=this._ProductService.pagination.amountItems [itemsPerPage]=this._ProductService.pagination.itemsPerPg [(ngModel)]=this._ProductService.pagination.currentPg
-            (pageChanged)="this._ProductService.pageChanged($event) " pageBtnClass="btn" previousText="Anterior
+        <pagination class="justify-content-center paginationstyle" [boundaryLinks]="true" [totalItems]=this._ProductServices.pagination.amountItems [itemsPerPage]=this._ProductServices.pagination.itemsPerPg [(ngModel)]=this._ProductServices.pagination.currentPg
+            (pageChanged)="this._ProductServices.pageChanged($event) " pageBtnClass="btn" previousText="Anterior
                                 " nextText="Proxímo " firstText="Primeiro " lastText="Último ">
         </pagination>
     </div>
