--- a/angular13/src/app/company/product/product-info/product-info.component.html
+++ b/angular13/src/app/company/product/product-info/product-info.component.html
@@ -2,7 +2,7 @@
     <div class="container">
 
         <div class="modal-header">
-            <h4 class="modal-title pull-center">
+            <h4 class="modal-title">
                 <table>
                     <tr class="align-self-center">
                         <td>
@@ -30,7 +30,7 @@
                     <div class="row">
 
 
-                        <div class="bg-warning">
+                        <div style="background-color: rgb(196, 155, 21);">
                             <div class="row">
                                 <div class="pt-2 col-9 align-self-end">
                                     <table>
@@ -141,7 +141,7 @@
                                                 </td>
                                                 <td><span class="badge bg-success ">{{prodInfo?.weight}}</span></td>
                                             </tr>
-                                            <div class="row pt-4"></div>
+                                            <div class="row pb-4"></div>
                                             <tr>
                                                 <td>
                                                     <h6>Descrição:</h6>
